--- a/css/style.css
+++ b/css/style.css
@@ -575,8 +575,7 @@ a:hover {
 
 .it-service-card img {
     width: 100%;
-    height: 280px;
-    object-fit: cover;
+    height: auto;
     display: block;
 }
 
